# bevy_template

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: app_state.rs  constants.rs  dev_tools.rs  main.rs  prelude.rs  utils.rs
src/main_menu/: mod.rs  settings.rs
src/settings/: audio.rs  mod.rs  window.rs
