[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["serialize"] }
enum-iterator = "2.1.0"
serde = "1.0.204"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1.0.121"
web-sys = { version = "0.3.69", default-features = false, features = ["Storage", "Window"] }
wasm-bindgen = { version = "0.2.92", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ron = "0.8.1"
dirs = "5.0.1"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]
